Restore compatibility with Java 8.